Fixed offcentre section buttons in navbar

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ input[type="submit"]:active {
 
 .navbar-menu {
   list-style-type: none;
-  margin: 0;
+  margin: -1%;
   padding: 0;
   width: 100%;
 }
